Placeholder trié pour tous les modules

--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -1,6 +1,6 @@
 +++
-title = "F-5 Tiger II"
-weight = 40
+title = "F-5E Tiger II"
+weight = 41
 +++
 
 <div class="contenu"> <!-- le hangar de Sklang //-->
