Ajout sections Mirage F1 et Mi-24 Hind

--- a/content/apprentissage/mi-24.md
+++ b/content/apprentissage/mi-24.md
@@ -1,6 +1,25 @@
 +++
 title = "Mi-24P Hind"
 weight = 82
-draft = true
 +++
+
+<div class="contenu"> <!-- le hangar de Sklang //-->
+{{< canal-youtube "id" "UCd6iQyhOcUrWR6DrRoMzeQg" >}}
+{{< ressource-video-youtube "dx7HYUQCYvQ" >}}
+</div>
+
+<div class="contenu"> <!-- CasmoTV//-->
+{{< canal-youtube "id" "UCcZauUXQ-dHSFqqqTXMLBSg" >}}
+{{< ressource-playlist-youtube "PLNtUtkZqN36mTcVKczPuSeMuQY7Ky0Pym" >}}
+</div>
+
+<div class="contenu"> <!-- nazradu //-->
+{{< canal-youtube "id" "UCTtzk7r9iAsNSjbeLUC5-_w" >}}
+{{< ressource-playlist-youtube "PLN_dChu0spFEvsZXhBBTBqVuT5_1izlDY" >}}
+</div>
+
+<div class="contenu"> <!-- RedKite //-->
+{{< canal-youtube "id" "UCmMuAwcwIi6N9gnSa81fUUg" >}}
+{{< ressource-playlist-youtube "PLml_c09ciuctQJwMTHQqbpIUS2taH3p8c" >}} Agrège plusieurs sources
+</div>
 
