Grooooosse mise à jour de toutes les chaines que je suis

--- a/content/apprentissage/a-10c.md
+++ b/content/apprentissage/a-10c.md
@@ -39,6 +39,11 @@ weight = 70
 {{< ressource-video-youtube "xo2ov_jjfLs" >}}
 </div>
 
+<div class="contenu"> <!-- Matt Waggner //-->
+{{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
+{{< ressource-playlist-youtube "PLF779D43F5153AD8E" >}}
+</div>
+
 <div class="contenu"> <!-- TheSkyline35 //-->
 {{< canal-youtube "id" "UCfipg1q2NsExNwfkPoRqZyQ" >}}
 {{< ressource-video-youtube "qCTxnhETvu4" >}}
