--- a/content/apprentissage/bf-109.md
+++ b/content/apprentissage/bf-109.md
@@ -1,6 +1,10 @@
 +++
-title = "Bf 109 K-4 Kurfurst"
+title = "Bf 109 K-4 Kurfürst"
 weight = 11
-draft = true
 +++
+
+<div class="contenu"> <!-- Matt Waggner //-->
+{{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
+{{< ressource-playlist-youtube "PLer9oF4AanvHNDWZ8hu8h6Cvz6uuXSp2Q" >}}
+</div>
 
