--- a/content/apprentissage/f-14.md
+++ b/content/apprentissage/f-14.md
@@ -28,6 +28,16 @@ weight = 50
 {{< ressource-playlist-youtube "PLbEi2nhCxrDVOAgxR59UgR0TnmC4qHkAi" >}}
 </div>
 
+<div class="contenu"> <!-- Zanck //-->
+{{< canal-youtube "id" "UCkNVbomjoHZom13dxjJWm3g" >}}
+{{< ressource-playlist-youtube "PLT-PAUSaoTg0CO_vUoQgA2sSfTy6ZpXF_" >}}
+</div>
+
+<div class="contenu"> <!-- Spudknocker //-->
+{{< canal-youtube "id" "UC1Rsn65d8Qzy4T9A8435sYw" >}}
+{{< ressource-playlist-youtube "PLZ8X4p18pdbmUs_ujgpyRSMXg8vzGR46Z" >}}
+</div>
+
 <div class="contenu"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjWn46S_favLwJjK2aZQD5bs" >}}
