--- a/content/apprentissage/f-15e.md
+++ b/content/apprentissage/f-15e.md
@@ -30,9 +30,19 @@ weight = 72
 {{< ressource-playlist-youtube "PLZ8X4p18pdbnp8aIGrrRHKT3SDlsLFnyq" >}}
 </div>
 
+<div class="contenu"> <!-- Deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjW75yiRUdzTd4NYDznReIeL" >}}
+</div>
+
 <div class="contenu">
 {{< canal-web "Air Warfare Group" >}}
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3332640/" "AIR WARFARE GROUP F-15E PILOT/WSO CHECKLISTS [By Banjo_AWG]" "planchette" >}}
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3332783/" "AIR WARFARE GROUP F-15E PILOT/WSO CHECKLISTS FOR NIGHT [By Banjo_AWG]" "planchette" >}}
+</div>
+
+<div class="contenu"> <!-- RedKite //-->
+{{< canal-youtube "id" "UCmMuAwcwIi6N9gnSa81fUUg" >}}
+{{< ressource-playlist-youtube "PLml_c09ciucsxQMR8cLvXKoLWqLYlvZ31" >}}
 </div>
 
