--- a/content/apprentissage/f-16c.md
+++ b/content/apprentissage/f-16c.md
@@ -84,6 +84,16 @@ Principalement sur le F-16.
 {{< ressource-video-youtube "sWHKJ20pjdk" >}}
 </div>
 
+<div class="contenu"> <!-- Tactical Pascale //-->
+{{< canal-youtube "id" "UC4Mwn7U1SSeaDLMVB7ERE0Q" >}}
+{{< ressource-playlist-youtube "PLnLWWfulBNps_moIcCODx41lCzS0lIcnE" >}}
+</div>
+
+<div class="contenu"> <!-- Fox 3 DCS //-->
+{{< canal-youtube "id" "UC4j_os41_iqlbX6kkQMbnmw" >}}
+{{< ressource-playlist-youtube "PLqGY49W4jCyKxHgZfZM4BsFXcuZcUX6AK" >}}
+</div>
+
 <div class="contenu"> <!-- Grim Reapers //-->
 {{< canal-youtube "id" "UCZuXjkFY00p1ga3UyCBbR2w" >}}
 {{< ressource-playlist-youtube "PL3kOAM2N1YJf8pIMCKRmRnP2RWkrWkSyZ" >}}
@@ -100,6 +110,11 @@ Principalement sur le F-16.
 <div class="contenu"> <!-- le hangar de Sklang //-->
 {{< canal-youtube "id" "UCd6iQyhOcUrWR6DrRoMzeQg" >}}
 {{< ressource-video-youtube "OKL7tjM8uac" >}}
+</div>
+
+<div class="contenu de_qualite"> <!-- AVM //-->
+{{< canal-web "Académie de vol militaire" >}}
+{{< ressource-web "https://avm-fr.com/" "AVM" >}}
 </div>
 
 <div class="contenu de_qualite"> <!-- Doc //-->
