--- a/content/apprentissage/fw-190.md
+++ b/content/apprentissage/fw-190.md
@@ -1,9 +1,29 @@
 +++
 title = "Fw 190"
 weight = 13
-draft = true
 +++
 
-Version A-8
+## Fw 190 A-8
 
-Version D-9 Dora
+<div class="contenu"> <!-- le hangar de Sklang //-->
+{{< canal-youtube "id" "UCd6iQyhOcUrWR6DrRoMzeQg" >}}
+{{< ressource-video-youtube "JK1gXCmE6uk" >}}
+</div>
+
+## Fw 190 D-9 Dora
+
+<div class="contenu"> <!-- le hangar de Sklang //-->
+{{< canal-youtube "id" "UCd6iQyhOcUrWR6DrRoMzeQg" >}}
+{{< ressource-video-youtube "NL7O3aQNY7s" >}}
+</div>
+
+
+<div class="contenu"> <!-- Matt Waggner //-->
+{{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
+{{< ressource-playlist-youtube "PLer9oF4AanvE7j_-LzFO8ZLtKC7IuE61G" >}}
+</div>
+
+<div class="contenu"> <!-- Deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjVMfyn_xaqYhHbaieFrrIyj" >}}
+</div>
