--- a/content/apprentissage/jf-17.md
+++ b/content/apprentissage/jf-17.md
@@ -34,9 +34,19 @@ weight = 54
 {{< ressource-playlist-youtube "PLxeAPpKC04wvjynpY_j7fpQnAAA85YrqU" >}}
 </div>
 
+<div class="contenu"> <!-- Tactical Pascale //-->
+{{< canal-youtube "id" "UC4Mwn7U1SSeaDLMVB7ERE0Q" >}}
+{{< ressource-playlist-youtube "PLnLWWfulBNpu68mEAUFBVOU4cPxqluOCM" >}}
+</div>
+
 <div class="contenu"> <!-- 26th Division //-->
 {{< canal-youtube "id" "UCzVTizd2qe4DAkCgtHzJabg" >}}
 {{< ressource-playlist-youtube "PLdjbN8WGLKnxapQ9_wqZRS2TNNA788M_p" >}}
 {{< ressource-web "https://wiki.3rd-wing.net/index.php?title=26th" "Wiki JF-17 3rd Wing" "wiki" >}}
+</div>
+
+<div class="contenu"> <!-- RedKite //-->
+{{< canal-youtube "id" "UCmMuAwcwIi6N9gnSa81fUUg" >}}
+{{< ressource-playlist-youtube "PLml_c09ciucvDUcxGxmCB-e1EJARdmu00" >}}
 </div>
 
