--- a/content/apprentissage/l-39.md
+++ b/content/apprentissage/l-39.md
@@ -1,6 +1,15 @@
 +++
 title = "L-39 Albatros"
 weight = 90
-draft = true
 +++
+
+<div class="contenu"> <!-- le hangar de Sklang //-->
+{{< canal-youtube "id" "UCd6iQyhOcUrWR6DrRoMzeQg" >}}
+{{< ressource-playlist-youtube "PLKG5Jw_s7ikznpLoSWKEeRxmXw4Q9Ci5J" >}}
+</div>
+
+<div class="contenu"> <!-- Deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjX6j_dZ2YXuq9siKhcOgjmF" >}}
+</div>
 
