--- a/content/apprentissage/m-2000c.md
+++ b/content/apprentissage/m-2000c.md
@@ -16,6 +16,11 @@ weight = 53
 {{< ressource-web "https://www.mudspike.com/chucks-guides-dcs-mirage-2000c/" "Chuck’s Guides – DCS Mirage 2000C" "tuto" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- AVM //-->
+{{< canal-web "Académie de vol militaire" >}}
+{{< ressource-web "https://avm-fr.com/" "AVM" >}}
+</div>
+
 <div class="contenu de_qualite"> <!-- Dilixo //-->
 {{< canal-youtube "id" "UCvS0HT1Xga7H_ACuhrGhEOg" >}}
 {{< ressource-playlist-youtube "PL1k_s5S44l5vn9YB-gjPcvghXRfprpnus" >}}
@@ -35,6 +40,16 @@ weight = 53
 <div class="contenu">
 {{< canal-web "Shiroka" >}}
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3318306/" "Mirage M-2000C Kneeboard Suite" "planchette" >}}
+</div>
+
+<div class="contenu"> <!-- Ian Christie //-->
+{{< canal-youtube "id" "UC4kJt_8Jw9ByL10ar6b8rQg" >}}
+{{< ressource-playlist-youtube "PL0jjGRFQGC0qFZ3HU8RukGhgTYOTTEkXv" >}}
+</div>
+
+<div class="contenu"> <!-- Deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjXBGcTv6KLfZfD0gjr3EnIK" >}}
 </div>
 
 <div class="contenu"> <!-- Association VEAF //-->
