--- a/content/apprentissage/mi-24.md
+++ b/content/apprentissage/mi-24.md
@@ -8,9 +8,25 @@ weight = 82
 {{< ressource-video-youtube "dx7HYUQCYvQ" >}}
 </div>
 
+<div class="contenu"> <!-- Erik Scott //-->
+{{< canal-youtube "id" "UCc9zyZ-Ji74F3zJVB3eb8JQ" >}}
+{{< ressource-video-youtube "FJXckcfGLxM" >}}
+{{< ressource-video-youtube "-iaKFwc2A7w" >}}
+</div>
+
 <div class="contenu"> <!-- CasmoTV//-->
 {{< canal-youtube "id" "UCcZauUXQ-dHSFqqqTXMLBSg" >}}
 {{< ressource-playlist-youtube "PLNtUtkZqN36mTcVKczPuSeMuQY7Ky0Pym" >}}
+</div>
+
+<div class="contenu"> <!-- Matt Waggner //-->
+{{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
+{{< ressource-playlist-youtube "PLer9oF4AanvE-fJ1WG29eIWYfO70DyLKE" >}}
+</div>
+
+<div class="contenu"> <!-- Heinlein //-->
+{{< canal-youtube "id" "UCQyDyxc788zaDfTtqnChAoQ" >}}
+{{< ressource-playlist-youtube "PLLnxK6CJYwVfBcGkm4o2abeBmylcuiPBN" >}}
 </div>
 
 <div class="contenu"> <!-- nazradu //-->
