--- a/content/apprentissage/p-47d.md
+++ b/content/apprentissage/p-47d.md
@@ -1,6 +1,10 @@
 +++
 title = "P-47D Thunderbolt"
 weight = 15
-draft = true
 +++
+
+<div class="contenu"> <!-- RedKite //-->
+{{< canal-youtube "id" "UCmMuAwcwIi6N9gnSa81fUUg" >}}
+{{< ressource-playlist-youtube "PLml_c09ciuctw0YRRlRn_tI7nETm2H98n" >}}
+</div>
 
