--- a/content/apprentissage/sa342.md
+++ b/content/apprentissage/sa342.md
@@ -1,6 +1,25 @@
 +++
 title = "SA342 Gazelle"
 weight = 83
-draft = true
 +++
+
+<div class="contenu"> <!-- Erik Scott //-->
+{{< canal-youtube "id" "UCc9zyZ-Ji74F3zJVB3eb8JQ" >}}
+{{< ressource-video-youtube "E96fhzKmCHI" >}}
+</div>
+
+<div class="contenu"> <!-- 131st Death Vipers //-->
+{{< canal-youtube "forUsername" "whitesky545" >}}
+{{< ressource-playlist-youtube "PLHX49UqNq5KV4aAVECp9T_Mlq8xYU6USw" >}}
+</div>
+
+<div class="contenu"> <!-- Deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjXZ3epLy_IZrja49NhOcoOV" >}}
+</div>
+
+<div class="contenu"> <!-- Heinlein //-->
+{{< canal-youtube "id" "UCQyDyxc788zaDfTtqnChAoQ" >}}
+{{< ressource-playlist-youtube "PLLnxK6CJYwVcR2X474T4L2EFfr2ERe7hz" >}}
+</div>
 
