--- a/content/apprentissage/c-101.md
+++ b/content/apprentissage/c-101.md
@@ -1,6 +1,10 @@
 +++
 title = "C-101 Aviojet"
 weight = 94
-draft = true
 +++
+
+<div class="contenu"> <!-- Deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjX_q6AMBUecfrlXaSWFYrKq" >}}
+</div>
 
