--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -18,3 +18,13 @@ weight = 41
 {{< ressource-playlist-youtube "PL4a4myRJ63XvP8RFEKD2KREP0GAiZDBWI" >}}
 </div>
 
+<div class="contenu"> <!-- Deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjXxx9P4gApw2u_b0X6DiYOu" >}}
+</div>
+
+<div class="contenu"> <!-- Heinlein //-->
+{{< canal-youtube "id" "UCQyDyxc788zaDfTtqnChAoQ" >}}
+{{< ressource-playlist-youtube "PLLnxK6CJYwVdce8ML3Phj-OCU597qOqab" >}}
+</div>
+
