--- a/content/apprentissage/ka-50.md
+++ b/content/apprentissage/ka-50.md
@@ -16,6 +16,7 @@ weight = 85
 <div class="contenu de_qualite"> <!-- 131st Death Vipers //-->
 {{< canal-youtube "forUsername" "whitesky545" >}}
 {{< ressource-playlist-youtube "PLHX49UqNq5KV7_PrHVt4U_SQUPy9ih_dY" >}}
+{{< ressource-playlist-youtube "PLHX49UqNq5KW6yi39lndpKXXQQyEk30XO" >}}
 </div>
 
 <div class="contenu"> <!-- Volk //-->
@@ -26,9 +27,24 @@ weight = 85
 {{< ressource-playlist-youtube "PL0oWakEJrJF6zS9Tz1YVJ4Vernga_ID-h" >}}
 </div>
 
-<div class="contenu"> <!-- clubby37 //-->
+<div class="contenu"> <!-- Viking 355th //-->
 {{< canal-youtube "id" "UCbRpH2t1-IODmoE395IZjwg" >}}
 {{< ressource-playlist-youtube "PL7pn4rQD0F5Y9Y_MVqDdIhtZWcBIz_cN0" >}}
 du même auteur que la série sur l'AJS-37 Viggen. On manque de recul sur le contenu, mais on ne doute pas que ce soit aussi bien que celle-ci.
+</div>
+
+<div class="contenu"> <!-- CasmoTV//-->
+{{< canal-youtube "id" "UCcZauUXQ-dHSFqqqTXMLBSg" >}}
+{{< ressource-playlist-youtube "PLNtUtkZqN36lyzRXDaZ822nGSZ9fjaoTJ" >}}
+</div>
+
+<div class="contenu"> <!-- Matt Waggner //-->
+{{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
+{{< ressource-playlist-youtube "PL9F47026271767CAE" >}}
+</div>
+
+<div class="contenu"> <!-- Deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjV6hnpYwR9k8z0p8Eeow2jS" >}}
 </div>
 
