--- a/content/apprentissage/p-51d.md
+++ b/content/apprentissage/p-51d.md
@@ -1,5 +1,10 @@
 +++
 title = "P-51D Mustang"
 weight = 16
-draft = true
 +++
+
+<div class="contenu"> <!-- Matt Waggner //-->
+{{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
+{{< ressource-playlist-youtube "PLer9oF4AanvGrRalPCiE9mB1i9BGR-K71" >}}
+</div>
+
