Mise à jour des liens vers les chuck's guide

--- a/content/apprentissage/bf-109.md
+++ b/content/apprentissage/bf-109.md
@@ -3,6 +3,11 @@ title = "Bf 109 K-4 Kurfürst"
 weight = 11
 +++
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "bf109k-4" >}}
+</div>
+
 <div class="contenu"> <!-- Matt Waggner //-->
 {{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
 {{< ressource-playlist-youtube "PLer9oF4AanvHNDWZ8hu8h6Cvz6uuXSp2Q" >}}
