--- a/content/apprentissage/c-101.md
+++ b/content/apprentissage/c-101.md
@@ -3,6 +3,11 @@ title = "C-101 Aviojet"
 weight = 94
 +++
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "c-101cc" >}}
+</div>
+
 <div class="contenu"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjX_q6AMBUecfrlXaSWFYrKq" >}}
