--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -10,7 +10,7 @@ weight = 41
 
 <div class="contenu"> <!-- Chuck's guide //-->
 {{< canal-chucksguide >}}
-{{< ressource-web "https://www.mudspike.com/chucks-guides-dcs-f-5e-tiger-ii/" "Chuck’s Guides – DCS F-5 Tiger II" "tuto" >}}
+{{< ressource-chucksguide "f-5e3" >}}
 </div>
 
 <div class="contenu"> <!-- Tricker //-->
