--- a/content/apprentissage/f-86f.md
+++ b/content/apprentissage/f-86f.md
@@ -3,6 +3,11 @@ title = "F-86F Sabre"
 weight = 21
 +++
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "f-86f" >}}
+</div>
+
 <div class="contenu"> <!-- Ian Christie //-->
 {{< canal-youtube "id" "UC4kJt_8Jw9ByL10ar6b8rQg" >}}
 {{< ressource-playlist-youtube "PL0jjGRFQGC0p3OhYDjeCpBdWs95dIncX7" >}}
