--- a/content/apprentissage/fw-190.md
+++ b/content/apprentissage/fw-190.md
@@ -3,11 +3,16 @@ title = "Fw 190"
 weight = 13
 +++
 
-## Fw 190 A-8
+## Fw 190 A-8 Anton
 
 <div class="contenu"> <!-- le hangar de Sklang //-->
 {{< canal-youtube "id" "UCd6iQyhOcUrWR6DrRoMzeQg" >}}
 {{< ressource-video-youtube "JK1gXCmE6uk" >}}
+</div>
+
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "fw-190a-8" >}}
 </div>
 
 ## Fw 190 D-9 Dora
@@ -17,6 +22,10 @@ weight = 13
 {{< ressource-video-youtube "NL7O3aQNY7s" >}}
 </div>
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "fw-190-d9" >}}
+</div>
 
 <div class="contenu"> <!-- Matt Waggner //-->
 {{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
