--- a/content/apprentissage/i-16.md
+++ b/content/apprentissage/i-16.md
@@ -1,6 +1,10 @@
 +++
 title = "I-16"
 weight = 10
-draft = true
 +++
+
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "i-16" >}}
+</div>
 
