--- a/content/apprentissage/jf-17.md
+++ b/content/apprentissage/jf-17.md
@@ -11,7 +11,7 @@ weight = 54
 
 <div class="contenu"> <!-- Chuck's guide //-->
 {{< canal-chucksguide >}}
-{{< ressource-web "https://www.mudspike.com/chucks-guides-dcs-jf-17-thunder/" "Chuck’s Guides – DCS JF-17 Thunder" "tuto" >}}
+{{< ressource-chucksguide "jf-17" >}}
 </div>
 
 <div class="contenu"> <!-- Deka Ironwork //-->
