--- a/content/apprentissage/l-39.md
+++ b/content/apprentissage/l-39.md
@@ -8,6 +8,11 @@ weight = 90
 {{< ressource-playlist-youtube "PLKG5Jw_s7ikznpLoSWKEeRxmXw4Q9Ci5J" >}}
 </div>
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "l-39za" >}}
+</div>
+
 <div class="contenu"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjX6j_dZ2YXuq9siKhcOgjmF" >}}
