--- a/content/apprentissage/m-2000c.md
+++ b/content/apprentissage/m-2000c.md
@@ -13,7 +13,7 @@ weight = 53
 
 <div class="contenu"> <!-- Chuck's guide //-->
 {{< canal-chucksguide >}}
-{{< ressource-web "https://www.mudspike.com/chucks-guides-dcs-mirage-2000c/" "Chuck’s Guides – DCS Mirage 2000C" "tuto" >}}
+{{< ressource-chucksguide "m-2000c" >}}
 </div>
 
 <div class="contenu de_qualite"> <!-- AVM //-->
