--- a/content/apprentissage/mi-24.md
+++ b/content/apprentissage/mi-24.md
@@ -8,6 +8,11 @@ weight = 82
 {{< ressource-video-youtube "dx7HYUQCYvQ" >}}
 </div>
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "mi-24p" >}}
+</div>
+
 <div class="contenu"> <!-- Erik Scott //-->
 {{< canal-youtube "id" "UCc9zyZ-Ji74F3zJVB3eb8JQ" >}}
 {{< ressource-video-youtube "FJXckcfGLxM" >}}
