--- a/content/apprentissage/p-47d.md
+++ b/content/apprentissage/p-47d.md
@@ -3,6 +3,11 @@ title = "P-47D Thunderbolt"
 weight = 15
 +++
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "p-47d" >}}
+</div>
+
 <div class="contenu"> <!-- RedKite //-->
 {{< canal-youtube "id" "UCmMuAwcwIi6N9gnSa81fUUg" >}}
 {{< ressource-playlist-youtube "PLml_c09ciuctw0YRRlRn_tI7nETm2H98n" >}}
