--- a/content/apprentissage/p-51d.md
+++ b/content/apprentissage/p-51d.md
@@ -3,6 +3,11 @@ title = "P-51D Mustang"
 weight = 16
 +++
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "p-51d" >}}
+</div>
+
 <div class="contenu"> <!-- Matt Waggner //-->
 {{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
 {{< ressource-playlist-youtube "PLer9oF4AanvGrRalPCiE9mB1i9BGR-K71" >}}
