--- a/content/apprentissage/a-10c.md
+++ b/content/apprentissage/a-10c.md
@@ -10,7 +10,7 @@ weight = 70
 
 <div class="contenu"> <!-- Chuck's guide //-->
 {{< canal-chucksguide >}}
-{{< ressource-web "https://www.mudspike.com/chucks-guides-dcs-a-10c-warthog/" "Chuck’s Guides – DCS A-10C Warthog" "tuto" >}}
+{{< ressource-chucksguide "a-10c" >}}
 </div>
 
 <div class="contenu"> <!-- Hoggitworld //-->
