--- a/content/apprentissage/f-14.md
+++ b/content/apprentissage/f-14.md
@@ -10,7 +10,7 @@ weight = 50
 
 <div class="contenu"> <!-- Chuck's guide //-->
 {{< canal-chucksguide >}}
-{{< ressource-web "https://www.mudspike.com/chucks-guides-dcs-f-14b-tomcat/" "Chuck’s Guides – DCS F-14B Tomcat" "tuto" >}}
+{{< ressource-chucksguide "f-14b" >}}
 </div>
 
 <div class="contenu"> <!-- Olivier Gaming //-->
