--- a/content/apprentissage/f-16c.md
+++ b/content/apprentissage/f-16c.md
@@ -10,7 +10,7 @@ weight = 51
 
 <div class="contenu"> <!-- Chuck's guide //-->
 {{< canal-chucksguide >}}
-{{< ressource-web "https://www.mudspike.com/chucks-guides-dcs-f-16c-viper/" "Chuck’s Guides – DCS F-16C VIPER" "tuto" >}}
+{{< ressource-chucksguide "f-16cm" >}}
 </div>
 
 <div class="contenu de_qualite"> <!-- Deephack //-->
