--- a/content/apprentissage/sa342.md
+++ b/content/apprentissage/sa342.md
@@ -13,6 +13,11 @@ weight = 83
 {{< ressource-playlist-youtube "PLHX49UqNq5KV4aAVECp9T_Mlq8xYU6USw" >}}
 </div>
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "sa-342" >}}
+</div>
+
 <div class="contenu"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjXZ3epLy_IZrja49NhOcoOV" >}}
