Ajout des chaines Reflected Simulation et 104th Maverick

--- a/content/apprentissage/bf-109.md
+++ b/content/apprentissage/bf-109.md
@@ -8,6 +8,11 @@ weight = 11
 {{< ressource-chucksguide "bf109k-4" >}}
 </div>
 
+<div class="contenu"> <!-- Reflected Simulations//-->
+{{< canal-youtube "id" "UCcR8pQnQrw2atotgqDRwaKg" >}}
+{{< ressource-video-youtube "TKeRdhBSMLE" >}}
+</div>
+
 <div class="contenu"> <!-- Matt Waggner //-->
 {{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
 {{< ressource-playlist-youtube "PLer9oF4AanvHNDWZ8hu8h6Cvz6uuXSp2Q" >}}
