--- a/content/apprentissage/p-47d.md
+++ b/content/apprentissage/p-47d.md
@@ -8,6 +8,11 @@ weight = 15
 {{< ressource-chucksguide "p-47d" >}}
 </div>
 
+<div class="contenu"> <!-- Reflected Simulations//-->
+{{< canal-youtube "id" "UCcR8pQnQrw2atotgqDRwaKg" >}}
+{{< ressource-video-youtube "EAn1J3iKQDY" >}}
+</div>
+
 <div class="contenu"> <!-- RedKite //-->
 {{< canal-youtube "id" "UCmMuAwcwIi6N9gnSa81fUUg" >}}
 {{< ressource-playlist-youtube "PLml_c09ciuctw0YRRlRn_tI7nETm2H98n" >}}
