--- a/content/apprentissage/p-51d.md
+++ b/content/apprentissage/p-51d.md
@@ -8,6 +8,11 @@ weight = 16
 {{< ressource-chucksguide "p-51d" >}}
 </div>
 
+<div class="contenu"> <!-- Reflected Simulations//-->
+{{< canal-youtube "id" "UCcR8pQnQrw2atotgqDRwaKg" >}}
+{{< ressource-video-youtube "6s93EFjGIKQ" >}}
+</div>
+
 <div class="contenu"> <!-- Matt Waggner //-->
 {{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
 {{< ressource-playlist-youtube "PLer9oF4AanvGrRalPCiE9mB1i9BGR-K71" >}}
