Playlist sur le F14

--- a/content/apprentissage/f-14.md
+++ b/content/apprentissage/f-14.md
@@ -48,3 +48,8 @@ weight = 50
 {{< ressource-playlist-youtube "PLml_c09ciucs3Q2SsJ2HDHBGpTbfkDwE4" >}} (Beaucoup de vidéos de Jabbers également)
 </div>
 
+<div class="contenu"> <!-- Reflected Simulations//-->
+{{< canal-youtube "id" "UCcR8pQnQrw2atotgqDRwaKg" >}}
+{{< ressource-playlist-youtube "PLRzvLZpRXLADDRXAq0PcmjWvYd1iCti40" >}} Principalement sur le F-14
+</div>
+
