Ajout seconde liste de chaines

--- a/content/apprentissage/a-10c.md
+++ b/content/apprentissage/a-10c.md
@@ -44,8 +44,19 @@ weight = 70
 {{< ressource-playlist-youtube "PLF779D43F5153AD8E" >}}
 </div>
 
+<div class="contenu"> <!-- Association VEAF //-->
+{{< canal-youtube "id" "UCEF1A_q8Cnw9JLW_Rlig3OQ" >}}
+{{< ressource-playlist-youtube "PLalR1_JFFm_4znCofm63md08-QZuyMJBR" >}}
+</div>
+
 <div class="contenu"> <!-- TheSkyline35 //-->
 {{< canal-youtube "id" "UCfipg1q2NsExNwfkPoRqZyQ" >}}
 {{< ressource-video-youtube "qCTxnhETvu4" >}}
 {{< ressource-video-youtube "CSSP9sDeqJk" >}}
 </div>
+
+<div class="contenu"> <!-- Banana Mayo //-->
+{{< canal-youtube "id" "UCvQ980BmIRjwVh6veB5lO9g" >}}
+{{< ressource-playlist-youtube "PLmL0WZQili6D_AsHa3q_yUBuDU2FIWBNt" >}}
+</div>
+
