--- a/content/apprentissage/f-14.md
+++ b/content/apprentissage/f-14.md
@@ -53,3 +53,13 @@ weight = 50
 {{< ressource-playlist-youtube "PLRzvLZpRXLADDRXAq0PcmjWvYd1iCti40" >}} Principalement sur le F-14
 </div>
 
+<div class="contenu"> <!-- EFPV //-->
+{{< canal-youtube "forUsername" "ecolepilotefrance" >}}
+{{< ressource-playlist-youtube "PLxeAPpKC04wsPc6ObTkOdQ8NxIcBw5s8J" >}}
+</div>
+
+<div class="contenu"> <!-- Empnicolas LzT //-->
+{{< canal-youtube "id" "UCdzYmqc6g789zNyXBcBpPeg" >}}
+{{< ressource-playlist-youtube "PLwWsAperJSsre4LOHeSbcjFgHYx00xi_A" >}}
+</div>
+
