--- a/content/apprentissage/f-16c.md
+++ b/content/apprentissage/f-16c.md
@@ -105,6 +105,11 @@ Principalement sur le F-16.
 {{< ressource-playlist-youtube "PLmL0WZQili6AIkufnprW4yg8uzcUfz6iH" >}}
 </div>
 
+<div class="contenu"> <!-- Empnicolas LzT //-->
+{{< canal-youtube "id" "UCdzYmqc6g789zNyXBcBpPeg" >}}
+{{< ressource-playlist-youtube "PLwWsAperJSsp3_O12hglqg6MNa0E7DoA1" >}} Tutos minute
+</div>
+
 ## Sur BMS
 
 <div class="contenu"> <!-- le hangar de Sklang //-->
