--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -28,3 +28,8 @@ weight = 41
 {{< ressource-playlist-youtube "PLLnxK6CJYwVdce8ML3Phj-OCU597qOqab" >}}
 </div>
 
+<div class="contenu"> <!-- Banana Mayo //-->
+{{< canal-youtube "id" "UCvQ980BmIRjwVh6veB5lO9g" >}}
+{{< ressource-playlist-youtube "PLmL0WZQili6D4iKmH-YMyFCc4dU4BqVJV" >}}
+</div>
+
