--- a/content/apprentissage/p-51d.md
+++ b/content/apprentissage/p-51d.md
@@ -1,5 +1,5 @@
 +++
-title = "P-51D Mustang"
+title = "P-51D Mustang / TF-51"
 weight = 16
 +++
 
@@ -11,6 +11,11 @@ weight = 16
 <div class="contenu"> <!-- Reflected Simulations//-->
 {{< canal-youtube "id" "UCcR8pQnQrw2atotgqDRwaKg" >}}
 {{< ressource-video-youtube "6s93EFjGIKQ" >}}
+</div>
+
+<div class="contenu"> <!-- Loulou de DCS World //-->
+{{< canal-youtube "id" "UCbNRGPeNjUke5pIzBZGOrig" >}}
+{{< ressource-playlist-youtube "PLDv3SYR9vGXl7xQk1EjYapQCrnXRECROX" >}}
 </div>
 
 <div class="contenu"> <!-- Matt Waggner //-->
