--- a/content/apprentissage/mi-24.md
+++ b/content/apprentissage/mi-24.md
@@ -44,3 +44,8 @@ weight = 82
 {{< ressource-playlist-youtube "PLml_c09ciuctQJwMTHQqbpIUS2taH3p8c" >}} Agrège plusieurs sources
 </div>
 
+<div class="contenu"> <!-- Banana Mayo //-->
+{{< canal-youtube "id" "UCvQ980BmIRjwVh6veB5lO9g" >}}
+{{< ressource-playlist-youtube "PLmL0WZQili6AIkufnprW4yg8uzcUfz6iH" >}}
+</div>
+
