--- a/content/apprentissage/mi-24.md
+++ b/content/apprentissage/mi-24.md
@@ -49,3 +49,7 @@ weight = 82
 {{< ressource-playlist-youtube "PLmL0WZQili6DYxWWmS-or64yHeCWOI-gH" >}}
 </div>
 
+<div class="contenu"> <!-- Commander Steinsch //-->
+{{< canal-youtube "id" "UCbfGqFOB-y52xZVS5-mgEvg" >}}
+{{< ressource-playlist-youtube "PL_uZ9_tQvzEpkeQAaNZDgjWOEssNjGgZO" >}}
+</div>
