Ajout des kneeboards de Minky7. Mis les kneeboards en haut des pages

--- a/content/apprentissage/a-10c.md
+++ b/content/apprentissage/a-10c.md
@@ -13,6 +13,16 @@ weight = 70
 {{< ressource-chucksguide "a-10c" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Minsky //-->
+{{< canal-web "Minsky" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3313817/" "A-10C and A-10C II Kneeboard Suite" "planchette" >}}
+</div>
+
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3319741/" "A-10C Kneeboard Checklists" "planchette" >}}
+</div>
+
 <div class="contenu"> <!-- Hoggitworld //-->
 {{< canal-hoggitworld >}}
 {{< ressource-web "https://wiki.hoggitworld.com/view/A-10C" "A-10C" "wiki" >}}
@@ -27,11 +37,6 @@ weight = 70
 <div class="contenu de_qualite"> <!-- ralfidude //-->
 {{< canal-youtube "forUsername" "ralfidude" >}}
 {{< ressource-playlist-youtube "PLYA7v8u34qu89mbs4TGGEIhkwJ8kgFRWr" >}}
-</div>
-
-<div class="contenu de_qualite"> <!-- Minsky //-->
-{{< canal-web "Minsky" >}}
-{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3313817/" "A-10C and A-10C II Kneeboard Suite" "planchette" >}}
 </div>
 
 <div class="contenu">
