--- a/content/apprentissage/f-15e.md
+++ b/content/apprentissage/f-15e.md
@@ -3,6 +3,17 @@ title = "F-15E Strike Eagle"
 weight = 72
 +++
 
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3331680/" "F-15E Kneeboard Checklists" "planchette" >}}
+</div>
+
+<div class="contenu">
+{{< canal-web "Air Warfare Group" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3332640/" "AIR WARFARE GROUP F-15E PILOT/WSO CHECKLISTS [By Banjo_AWG]" "planchette" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3332783/" "AIR WARFARE GROUP F-15E PILOT/WSO CHECKLISTS FOR NIGHT [By Banjo_AWG]" "planchette" >}}
+</div>
+
 <div class="contenu"> <!-- Doc //-->
 {{< canal-youtube "id" "UCgmpgFZDI_FEfuAKTyYe88g" >}}
 {{< ressource-video-youtube "RU4dsJ-nScA" >}}
@@ -33,12 +44,6 @@ weight = 72
 <div class="contenu"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjW75yiRUdzTd4NYDznReIeL" >}}
-</div>
-
-<div class="contenu">
-{{< canal-web "Air Warfare Group" >}}
-{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3332640/" "AIR WARFARE GROUP F-15E PILOT/WSO CHECKLISTS [By Banjo_AWG]" "planchette" >}}
-{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3332783/" "AIR WARFARE GROUP F-15E PILOT/WSO CHECKLISTS FOR NIGHT [By Banjo_AWG]" "planchette" >}}
 </div>
 
 <div class="contenu"> <!-- RedKite //-->
