--- a/content/apprentissage/f-16c.md
+++ b/content/apprentissage/f-16c.md
@@ -13,6 +13,16 @@ weight = 51
 {{< ressource-chucksguide "f-16cm" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- DCS hughlb2@gmail.com //-->
+{{< canal-web "hughlb2@gmail.com" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3306479/" "DCS F-16CM Viper Day/Night Kneeboard for Normal/Scramble Operations" "planchette" >}}
+</div>
+
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3317321/" "F-16C Kneeboard Checklists" "planchette" >}}
+</div>
+
 <div class="contenu de_qualite"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjWoTGjsGuU7IyPc7mC-FviK" >}}
@@ -32,11 +42,6 @@ Principalement sur le F-16.
 <div class="contenu de_qualite"> <!-- Gaffer DCS //-->
 {{< canal-youtube "id" "UCbX5Rz6cH_4XoovFOATgwtA" >}}
 {{< ressource-playlist-youtube "PLlrB2czNQh1YXERWJiL-BpoueifYwvf_Q" >}}
-</div>
-
-<div class="contenu"> <!-- DCS hughlb2@gmail.com //-->
-{{< canal-web "hughlb2@gmail.com" >}}
-{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3306479/" "DCS F-16CM Viper Day/Night Kneeboard for Normal/Scramble Operations" "planchette" >}}
 </div>
 
 <div class="contenu"> <!-- Spudknocker //-->
