--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -13,7 +13,17 @@ weight = 41
 {{< ressource-chucksguide "f-5e3" >}}
 </div>
 
-<div class="contenu"> <!-- Tricker //-->
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3330980/" "F-5E Kneeboard Checklists" "planchette" >}}
+</div>
+
+<div class="contenu de_qualite"> <!-- Heinlein //-->
+{{< canal-youtube "id" "UCQyDyxc788zaDfTtqnChAoQ" >}}
+{{< ressource-playlist-youtube "PLLnxK6CJYwVdce8ML3Phj-OCU597qOqab" >}}
+</div>
+
+<div class="contenu de_qualite"> <!-- Tricker //-->
 {{< canal-youtube "id" "UCcSm9zitjaWrfJxfM-Q-djQ" >}}
 {{< ressource-playlist-youtube "PL4a4myRJ63XvP8RFEKD2KREP0GAiZDBWI" >}}
 </div>
@@ -21,11 +31,6 @@ weight = 41
 <div class="contenu"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjXxx9P4gApw2u_b0X6DiYOu" >}}
-</div>
-
-<div class="contenu"> <!-- Heinlein //-->
-{{< canal-youtube "id" "UCQyDyxc788zaDfTtqnChAoQ" >}}
-{{< ressource-playlist-youtube "PLLnxK6CJYwVdce8ML3Phj-OCU597qOqab" >}}
 </div>
 
 <div class="contenu"> <!-- Banana Mayo //-->
