--- a/content/apprentissage/f-86f.md
+++ b/content/apprentissage/f-86f.md
@@ -8,6 +8,11 @@ weight = 21
 {{< ressource-chucksguide "f-86f" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3320026/" "F-86F Kneeboard Checklists" "planchette" >}}
+</div>
+
 <div class="contenu"> <!-- Ian Christie //-->
 {{< canal-youtube "id" "UC4kJt_8Jw9ByL10ar6b8rQg" >}}
 {{< ressource-playlist-youtube "PL0jjGRFQGC0p3OhYDjeCpBdWs95dIncX7" >}}
