--- a/content/apprentissage/jf-17.md
+++ b/content/apprentissage/jf-17.md
@@ -14,6 +14,11 @@ weight = 54
 {{< ressource-chucksguide "jf-17" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3317396/" "JF-17 Kneeboard Checklists" "planchette" >}}
+</div>
+
 <div class="contenu"> <!-- Deka Ironwork //-->
 {{< canal-youtube "id" "UCOaRp90VE9Lhif1dbFWIuOQ" >}}
 {{< ressource-playlist-youtube "PLpEU7kYTYExgrub0_lhoq4neVV6QzRXlD" >}}
