--- a/content/apprentissage/ka-50.md
+++ b/content/apprentissage/ka-50.md
@@ -13,6 +13,11 @@ weight = 85
 {{< ressource-chucksguide "ka-50" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3317323/" "Ka-50 Kneeboard Checklists" "planchette" >}}
+</div>
+
 <div class="contenu de_qualite"> <!-- 131st Death Vipers //-->
 {{< canal-youtube "forUsername" "whitesky545" >}}
 {{< ressource-playlist-youtube "PLHX49UqNq5KV7_PrHVt4U_SQUPy9ih_dY" >}}
