--- a/content/apprentissage/mi-24.md
+++ b/content/apprentissage/mi-24.md
@@ -13,6 +13,11 @@ weight = 82
 {{< ressource-chucksguide "mi-24p" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3316891/" "Mi-24P Hind Startup Kneeboard Checklists" "planchette" >}}
+</div>
+
 <div class="contenu"> <!-- Erik Scott //-->
 {{< canal-youtube "id" "UCc9zyZ-Ji74F3zJVB3eb8JQ" >}}
 {{< ressource-video-youtube "FJXckcfGLxM" >}}
