--- a/content/apprentissage/sa342.md
+++ b/content/apprentissage/sa342.md
@@ -8,6 +8,11 @@ weight = 83
 {{< ressource-video-youtube "E96fhzKmCHI" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3331669/" "SA342 Gazelle Kneeboard Checklists" "planchette" >}}
+</div>
+
 <div class="contenu"> <!-- 131st Death Vipers //-->
 {{< canal-youtube "forUsername" "whitesky545" >}}
 {{< ressource-playlist-youtube "PLHX49UqNq5KV4aAVECp9T_Mlq8xYU6USw" >}}
