--- a/content/apprentissage/f-14.md
+++ b/content/apprentissage/f-14.md
@@ -13,6 +13,11 @@ weight = 50
 {{< ressource-chucksguide "f-14b" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3320015/" "F-14 Kneeboard Checklists" "planchette" >}}
+</div>
+
 <div class="contenu"> <!-- Olivier Gaming //-->
 {{< canal-youtube "id" "UCvghcDSMWXUjLEjFcBBumVw" >}}
 {{< ressource-playlist-youtube "PLpbLV3TvMUKweaNlfW8vZExcyKDl8BSM1" >}}
