--- a/content/apprentissage/l-39.md
+++ b/content/apprentissage/l-39.md
@@ -13,6 +13,11 @@ weight = 90
 {{< ressource-chucksguide "l-39za" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3322672/" "L-39 Kneeboard Checklists" "planchette" >}}
+</div>
+
 <div class="contenu"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjX6j_dZ2YXuq9siKhcOgjmF" >}}
