--- a/content/apprentissage/m-2000c.md
+++ b/content/apprentissage/m-2000c.md
@@ -16,15 +16,25 @@ weight = 53
 {{< ressource-chucksguide "m-2000c" >}}
 </div>
 
-<div class="contenu de_qualite"> <!-- AVM //-->
-{{< canal-web "Académie de vol militaire" >}}
-{{< ressource-web "https://avm-fr.com/" "AVM" >}}
-</div>
-
 <div class="contenu de_qualite"> <!-- Dilixo //-->
 {{< canal-youtube "id" "UCvS0HT1Xga7H_ACuhrGhEOg" >}}
 {{< ressource-playlist-youtube "PL1k_s5S44l5vn9YB-gjPcvghXRfprpnus" >}}
 {{< ressource-web "https://docs.google.com/document/d/1149__rFz5wON-xjUacqir9NeZz4kUJXrpL7WTtG4LaU/" "CheckLists DCS Mirage 2000-C" "planchette" >}}
+</div>
+
+<div class="contenu de_qualite"> <!-- Minky7 //-->
+{{< canal-web "Minky7" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3315205/" "M-2000C Kneeboard Checklists" "planchette" >}}
+</div>
+
+<div class="contenu">
+{{< canal-web "Shiroka" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3318306/" "Mirage M-2000C Kneeboard Suite" "planchette" >}}
+</div>
+
+<div class="contenu de_qualite"> <!-- AVM //-->
+{{< canal-web "Académie de vol militaire" >}}
+{{< ressource-web "https://avm-fr.com/" "AVM" >}}
 </div>
 
 <div class="contenu de_qualite"> <!-- Photun //-->
@@ -35,11 +45,6 @@ weight = 53
 <div class="contenu de_qualite"> <!-- Groupement de Chasse 22 //-->
 {{< canal-youtube "id" "UCugjylYr7Hr-ZH8QQj5xkpw" >}}
 {{< ressource-playlist-youtube "PLIGR26sb4iVWOa_0PVDmtWU74_h_OVzy_" >}}
-</div>
-
-<div class="contenu">
-{{< canal-web "Shiroka" >}}
-{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3318306/" "Mirage M-2000C Kneeboard Suite" "planchette" >}}
 </div>
 
 <div class="contenu"> <!-- Ian Christie //-->
