Planchette F5 pour l'armement

--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -28,6 +28,11 @@ weight = 41
 {{< ressource-playlist-youtube "PL4a4myRJ63XvP8RFEKD2KREP0GAiZDBWI" >}}
 </div>
 
+<div class="contenu"> <!-- FlyingHueman //-->
+{{< canal-web "FlyingHueman" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3320266/" "F-5E Bomb And Rocket Depression Tables For Kneeboard" "planchette" >}}
+</div>
+
 <div class="contenu"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjXxx9P4gApw2u_b0X6DiYOu" >}}
