Grosse refonte du display des ressources-web avec des svg

--- a/content/apprentissage/a-10c.md
+++ b/content/apprentissage/a-10c.md
@@ -25,7 +25,7 @@ weight = 70
 
 <div class="contenu"> <!-- Hoggitworld //-->
 {{< canal-hoggitworld >}}
-{{< ressource-web "https://wiki.hoggitworld.com/view/A-10C" "A-10C" "wiki" >}}
+{{< ressource-web "https://wiki.hoggitworld.com/view/A-10C" "A-10C" "documentation" >}}
 </div>
 
 <div class="contenu de_qualite"> <!-- Doc //-->
