--- a/content/apprentissage/jf-17.md
+++ b/content/apprentissage/jf-17.md
@@ -47,7 +47,7 @@ weight = 54
 <div class="contenu"> <!-- 26th Division //-->
 {{< canal-youtube "id" "UCzVTizd2qe4DAkCgtHzJabg" >}}
 {{< ressource-playlist-youtube "PLdjbN8WGLKnxapQ9_wqZRS2TNNA788M_p" >}}
-{{< ressource-web "https://wiki.3rd-wing.net/index.php?title=26th" "Wiki JF-17 3rd Wing" "wiki" >}}
+{{< ressource-web "https://wiki.3rd-wing.net/index.php?title=26th" "Wiki JF-17 3rd Wing" "documentation" >}}
 </div>
 
 <div class="contenu"> <!-- RedKite //-->
