Ajout des chaines Bunyap Sims et The Air Combat Tutorial Library

--- a/content/apprentissage/bf-109.md
+++ b/content/apprentissage/bf-109.md
@@ -13,6 +13,11 @@ weight = 11
 {{< ressource-video-youtube "TKeRdhBSMLE" >}}
 </div>
 
+<div class="contenu"> <!-- Bunyap Sims //-->
+{{< canal-youtube "id" "UCChA7JzaWoakPbvpmUzMH5g" >}}
+{{< ressource-playlist-youtube "PLoiMNu5jyFzQo8mQuCypecUyLbUSnmoRs" >}}
+</div>
+
 <div class="contenu"> <!-- Matt Waggner //-->
 {{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
 {{< ressource-playlist-youtube "PLer9oF4AanvHNDWZ8hu8h6Cvz6uuXSp2Q" >}}
