--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -28,6 +28,17 @@ weight = 41
 {{< ressource-playlist-youtube "PL4a4myRJ63XvP8RFEKD2KREP0GAiZDBWI" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Requiem / The Air Combat Tutorial Library //-->
+{{< canal-youtube "id" "UCwV5RLX7mkaDy5gTIiuwGmg" >}}
+{{< ressource-playlist-youtube "PLnyigzFtHeNoVFUIFFkc8Zvzvr2ZN3Qme" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3312277/" "Requiem's F-5E Cockpit Workflows & Kneeboard" "planchette" >}}
+</div>
+
+<div class="contenu de_qualite"> <!-- Bunyap Sims //-->
+{{< canal-youtube "id" "UCChA7JzaWoakPbvpmUzMH5g" >}}
+{{< ressource-playlist-youtube "PLoiMNu5jyFzTWpTVFFz9wls4woqHzRloY" >}}
+</div>
+
 <div class="contenu"> <!-- FlyingHueman //-->
 {{< canal-web "FlyingHueman" >}}
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3320266/" "F-5E Bomb And Rocket Depression Tables For Kneeboard" "planchette" >}}
