--- a/content/apprentissage/l-39.md
+++ b/content/apprentissage/l-39.md
@@ -23,3 +23,8 @@ weight = 90
 {{< ressource-playlist-youtube "PLLY_KGBSBGjX6j_dZ2YXuq9siKhcOgjmF" >}}
 </div>
 
+<div class="contenu"> <!-- Bunyap Sims //-->
+{{< canal-youtube "id" "UCChA7JzaWoakPbvpmUzMH5g" >}}
+{{< ressource-playlist-youtube "PLoiMNu5jyFzQww51HXYK9VbYqhGsrt-1O" >}}
+</div>
+
