--- a/content/apprentissage/m-2000c.md
+++ b/content/apprentissage/m-2000c.md
@@ -52,6 +52,11 @@ weight = 53
 {{< ressource-playlist-youtube "PL0jjGRFQGC0qFZ3HU8RukGhgTYOTTEkXv" >}}
 </div>
 
+<div class="contenu"> <!-- Bunyap Sims //-->
+{{< canal-youtube "id" "UCChA7JzaWoakPbvpmUzMH5g" >}}
+{{< ressource-playlist-youtube "PLoiMNu5jyFzQZBwcYGLx4zefsZAQ2ac02" >}}
+</div>
+
 <div class="contenu"> <!-- Deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjXBGcTv6KLfZfD0gjr3EnIK" >}}
