--- a/content/apprentissage/p-47d.md
+++ b/content/apprentissage/p-47d.md
@@ -18,3 +18,9 @@ weight = 15
 {{< ressource-playlist-youtube "PLml_c09ciuctw0YRRlRn_tI7nETm2H98n" >}}
 </div>
 
+<div class="contenu"> <!-- Requiem / The Air Combat Tutorial Library //-->
+{{< canal-youtube "id" "UCwV5RLX7mkaDy5gTIiuwGmg" >}}
+{{< ressource-playlist-youtube "PLnyigzFtHeNqqots1Nc-dFgRmIY5T3Uhc" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3316646/" "Requiem's P-47D Cockpit Workflows" "planchette" >}}
+</div>
+
