--- a/content/apprentissage/sa342.md
+++ b/content/apprentissage/sa342.md
@@ -33,3 +33,8 @@ weight = 83
 {{< ressource-playlist-youtube "PLLnxK6CJYwVcR2X474T4L2EFfr2ERe7hz" >}}
 </div>
 
+<div class="contenu"> <!-- Bunyap Sims //-->
+{{< canal-youtube "id" "UCChA7JzaWoakPbvpmUzMH5g" >}}
+{{< ressource-playlist-youtube "PLoiMNu5jyFzQTjEIhGFPWZ2qFfCIVf0l9" >}}
+</div>
+
