Ajout planchette F-5 par Minsky (DimOn)

--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -13,6 +13,11 @@ weight = 41
 {{< ressource-chucksguide "f-5e3" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Minsky //-->
+{{< canal-web "Minsky" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3343629/" "F-5E-3 Kneeboard Suite" "planchette" >}}
+</div>
+
 <div class="contenu de_qualite"> <!-- Minky7 //-->
 {{< canal-web "Minky7" >}}
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3330980/" "F-5E Kneeboard Checklists" "planchette" >}}
