mustang: ajout d'un complément au tuto de Reflected Simulations

--- a/content/apprentissage/p-51d.md
+++ b/content/apprentissage/p-51d.md
@@ -11,6 +11,7 @@ weight = 16
 <div class="contenu"> <!-- Reflected Simulations//-->
 {{< canal-youtube "id" "UCcR8pQnQrw2atotgqDRwaKg" >}}
 {{< ressource-video-youtube "6s93EFjGIKQ" >}}
+{{< ressource-video-youtube "NDfGl2GcnP0" >}}
 </div>
 
 <div class="contenu"> <!-- Loulou de DCS World //-->
