mustang: Reflected Simulations est du contenu de qualité

--- a/content/apprentissage/p-51d.md
+++ b/content/apprentissage/p-51d.md
@@ -8,7 +8,7 @@ weight = 16
 {{< ressource-chucksguide "p-51d" >}}
 </div>
 
-<div class="contenu"> <!-- Reflected Simulations//-->
+<div class="contenu de_qualite"> <!-- Reflected Simulations//-->
 {{< canal-youtube "id" "UCcR8pQnQrw2atotgqDRwaKg" >}}
 {{< ressource-video-youtube "6s93EFjGIKQ" >}}
 {{< ressource-video-youtube "NDfGl2GcnP0" >}}
