Tri par qualité pour le F-5, ajout planchette pour l'A-4E

--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -13,6 +13,12 @@ weight = 41
 {{< ressource-chucksguide "f-5e3" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Requiem / The Air Combat Tutorial Library //-->
+{{< canal-youtube "id" "UCwV5RLX7mkaDy5gTIiuwGmg" >}}
+{{< ressource-playlist-youtube "PLnyigzFtHeNoVFUIFFkc8Zvzvr2ZN3Qme" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3312277/" "Requiem's F-5E Cockpit Workflows & Kneeboard" "planchette" >}}
+</div>
+
 <div class="contenu de_qualite"> <!-- Minsky //-->
 {{< canal-web "Minsky" >}}
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3343629/" "F-5E-3 Kneeboard Suite" "planchette" >}}
@@ -23,26 +29,21 @@ weight = 41
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3330980/" "F-5E Kneeboard Checklists" "planchette" >}}
 </div>
 
-<div class="contenu de_qualite"> <!-- Heinlein //-->
-{{< canal-youtube "id" "UCQyDyxc788zaDfTtqnChAoQ" >}}
-{{< ressource-playlist-youtube "PLLnxK6CJYwVdce8ML3Phj-OCU597qOqab" >}}
-</div>
-
-<div class="contenu de_qualite"> <!-- Tricker //-->
-{{< canal-youtube "id" "UCcSm9zitjaWrfJxfM-Q-djQ" >}}
-{{< ressource-playlist-youtube "PL4a4myRJ63XvP8RFEKD2KREP0GAiZDBWI" >}}
-</div>
-
-<div class="contenu de_qualite"> <!-- Requiem / The Air Combat Tutorial Library //-->
-{{< canal-youtube "id" "UCwV5RLX7mkaDy5gTIiuwGmg" >}}
-{{< ressource-playlist-youtube "PLnyigzFtHeNoVFUIFFkc8Zvzvr2ZN3Qme" >}}
-{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3312277/" "Requiem's F-5E Cockpit Workflows & Kneeboard" "planchette" >}}
-</div>
-
 <div class="contenu de_qualite"> <!-- Bunyap Sims //-->
 {{< canal-youtube "id" "UCChA7JzaWoakPbvpmUzMH5g" >}}
 {{< ressource-playlist-youtube "PLoiMNu5jyFzTWpTVFFz9wls4woqHzRloY" >}}
 </div>
+
+<div class="contenu"> <!-- Tricker //-->
+{{< canal-youtube "id" "UCcSm9zitjaWrfJxfM-Q-djQ" >}}
+{{< ressource-playlist-youtube "PL4a4myRJ63XvP8RFEKD2KREP0GAiZDBWI" >}}
+</div>
+
+<div class="contenu"> <!-- Heinlein //-->
+{{< canal-youtube "id" "UCQyDyxc788zaDfTtqnChAoQ" >}}
+{{< ressource-playlist-youtube "PLLnxK6CJYwVdce8ML3Phj-OCU597qOqab" >}}
+</div>
+
 
 <div class="contenu"> <!-- FlyingHueman //-->
 {{< canal-web "FlyingHueman" >}}
