P-51D: playlist d'AIR WARFARE CHANNEL

--- a/content/apprentissage/p-51d.md
+++ b/content/apprentissage/p-51d.md
@@ -14,6 +14,12 @@ weight = 16
 {{< ressource-video-youtube "NDfGl2GcnP0" >}}
 </div>
 
+<div class="contenu"> <!-- THE AIR WARFARE GROUP //-->
+{{< canal-youtube "id" "UCdz6fNb-V-h2iZ_daWNoaTQ" >}}
+{{< ressource-playlist-youtube "PLroS5xjXW90scZqDZ8CyOTOMTJ6htGu4m" >}}
+</div>
+
+
 <div class="contenu"> <!-- Loulou de DCS World //-->
 {{< canal-youtube "id" "UCbNRGPeNjUke5pIzBZGOrig" >}}
 {{< ressource-playlist-youtube "PLDv3SYR9vGXl7xQk1EjYapQCrnXRECROX" >}}
