Ajout des modules manquants (en draft), tri par date de mise en service (approximative)

--- a/content/apprentissage/c-101.md
+++ b/content/apprentissage/c-101.md
@@ -1,6 +1,6 @@
 +++
-title = "C-101 Aviojet"
-weight = 94
+title = "Casa C-101 Aviojet"
+weight = 1980
 +++
 
 <div class="contenu"> <!-- Chuck's guide //-->
