Ajout des Chuck's guides manquants

--- a/content/apprentissage/f-15e.md
+++ b/content/apprentissage/f-15e.md
@@ -3,6 +3,11 @@ title = "F-15E Strike Eagle"
 weight = 1989
 +++
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "f-15e" >}}
+</div>
+
 <div class="contenu de_qualite"> <!-- Minky7 //-->
 {{< canal-web "Minky7" >}}
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3331680/" "F-15E Kneeboard Checklists" "planchette" >}}
