--- a/content/apprentissage/f-4.md
+++ b/content/apprentissage/f-4.md
@@ -1,6 +1,9 @@
 +++
 title = "F-4E Phantom II"
 weight = 1960
-draft = true
 +++
 
+<div class="contenu"> <!-- Chuck's guide //-->
+{{< canal-chucksguide >}}
+{{< ressource-chucksguide "f-4e" >}}
+</div>
