Beginner serie sur MB339

--- a/content/apprentissage/mb-339.md
+++ b/content/apprentissage/mb-339.md
@@ -1,5 +1,9 @@
 +++
 title = "Aermacchi MB-339"
 weight = 1979
-draft = true
 +++
+
+<div class="contenu"> <!-- The Ops Center By Mike Solyom //-->
+{{< canal-youtube "id" "UCAGylbmVAkEyOibhDVUYrPA" >}}
+{{< ressource-playlist-youtube "PLd5Qdmhmp3Y6_3hByoSL8AfNEzs60o_QI" >}}
+</div>
